--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -2,7 +2,6 @@
 <br>
 <% @restaurants.each do |restaurant| %>
   <h3><%= restaurant.name %></h3>
-  <p><%= restaurant.address %></p>
-  <p><%= restaurant.phone_number %></p>
+  <p><%= restaurant.category %></p>
   <br>
 <% end %>
