--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -1,7 +1,10 @@
 <h1>Restaurants List</h1>
 <br>
+<%= link_to "Add restaurant", new_restaurant_path %>
+<br>
+<br>
 <% @restaurants.each do |restaurant| %>
-  <h3><%= restaurant.name %></h3>
+  <h3><%= link_to restaurant.name, restaurant_path(restaurant) %></h3>
   <p><%= restaurant.category %></p>
   <br>
 <% end %>
